# unifiednamespace

./: .flake8  .gitignore  .safety-policy.yml  CONTRIBUTING.md  LICENSE  LICENSE.aiohttp  LICENSE.aiomqtt  LICENSE.asynpg  LICENSE.dynaconf  LICENSE.eclipse.tahu.sparkplugb  LICENSE.librdkafka  LICENSE.neo4j-python-driver  LICENSE.strawberry-graphql  LICENSE.uvicorn  README.md  SECURITY.md  benchmark.py  docker-compose.yml  pyproject.toml  pytest.ini  run_graphql_ci.sh  test_extend.py
02_mqtt-cluster/: README.md  Readme.md  action.tester  benchmark.py  benchmark_dataset_columns.py  emqx-helm.sh  emqx-values.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
02_mqtt-cluster/protobuf/: protobuf.version
02_mqtt-cluster/sparkplug_b/: sparkplug_b.json
02_mqtt-cluster/src/uns_mqtt/: mqtt_listener.py  mqtt_listner.py
02_mqtt-cluster/src/uns_sparkplugb/: uns_spb_enums.py  uns_spb_helper.py
02_mqtt-cluster/test/: test_mqtt_listner.py  test_performance.py  test_uns_sparkplug_b_gen.py  test_uns_spb_enums.py  test_uns_spb_helper.py  test_uns_spb_helper_metrics.py  test_uns_spb_helper_payloads.py  test_uns_spb_helper_templates.py  test_uns_spb_templates.py
02_mqtt-cluster/test/local_mqtt/: acl  emqx-acl.conf  emqx_docker-compose.yaml  emqx_user-import.csv  mosquitto.conf  mosquitto_docker-compose.yaml  passwd
02_mqtt-cluster/test/local_mqtt/certs/ca/: ca.crt  ca.key  ca.srl
02_mqtt-cluster/test/local_mqtt/certs/clients/: ro_client.crt  ro_client.csr  ro_client.key  ro_client.pem  rw_client.crt  rw_client.csr  rw_client.key  rw_client.pem  wo_client.crt  wo_client.csr  wo_client.key  wo_client.pem
02_mqtt-cluster/test/local_mqtt/certs/server/: server.crt  server.csr  server.key  server.pem
03_uns_graphdb/: .gitignore  .secrets_template.yaml  Dockerfile  README.md  Readme.md  config.py  graphdb_handler.py  handler.py  install_graphdb.sh  mqtt_graphdb.py  mqtt_listner.py  pyproject.toml  requirements.txt  settings.yaml  setup.cfg  setup.py
03_uns_graphdb/conf/: .secrets_template.yaml  settings.yaml
03_uns_graphdb/src/uns_graphdb/: graphdb_config.py  graphdb_handler.py  health_check.py  uns_mqtt_graphdb.py
03_uns_graphdb/test/: test_03_health_check.py  test_graphdb_config.py  test_graphdb_handler.py  test_health_check.py  test_uns_graphdb.py
04_uns_historian/: .gitignore  Dockerfile  README.md  Readme.md  conftest.py  handler.py  mqtt_historian.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
04_uns_historian/conf/: .secrets_template.yaml  settings.yaml
04_uns_historian/sql_scripts/: 01_setup_db.sql  02_setup_hypertable.sql
04_uns_historian/src/uns_historian/: config.py  health_check.py  historian_config.py  historian_handler.py  uns_mqtt_historian.py
04_uns_historian/test/: conftest.py  test_04_health_check.py  test_health_check.py  test_historian_config.py  test_historian_handler.py  test_uns_historian.py
05_sparkplugb/: .gitignore  Dockerfile  README.md  Readme.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
05_sparkplugb/conf/: .gitignore  .secrets_template.yaml  settings.yaml
05_sparkplugb/src/uns_sparkplugb/: sparkplugb_enc_config.py  spb2unspublisher.py  uns_sparkplug_b.py  uns_sparkplug_b_gen.py  uns_sparkplugb_listner.py
05_sparkplugb/src/uns_spb_mapper/: health_check.py  sparkplugb_enc_config.py  spb2unspublisher.py  uns_sparkplugb_listener.py  uns_sparkplugb_listner.py
05_sparkplugb/test/: test_05_health_check.py  test_sparkplugb_enc_config.py  test_spb2unspublisher.py  test_uns_sparkplug_b.py  test_uns_sparkplug_b_gen.py
06_uns_kafka/: Dockerfile  README.md  pyproject.toml
06_uns_kafka/conf/: .secrets_template.yaml  settings.yaml
06_uns_kafka/src/uns_kafka/: health_check.py  kafka_handler.py  uns_kafka_config.py  uns_kafka_listener.py
06_uns_kafka/test/: test_06_health_check.py  test_kafka_config.py  test_kafka_handler.py  test_uns_kafka_listner.py
07_uns_graphql/: Dockerfile  README.md  conftest.py  pyproject.toml
07_uns_graphql/conf/: .secrets_template.yaml  settings.yaml
07_uns_graphql/schema/: uns_schema.graphql
07_uns_graphql/src/uns_graphql/: graphql_config.py  health_check.py  query.py  schema.py  subscriptions.py  type.py  uns_graphql_app.py
07_uns_graphql/src/uns_graphql/backend/: graphdb.py  historian.py
07_uns_graphql/src/uns_graphql/input/: kafka.py  kafka_subscription.py  mqtt.py  mqtt_subscription.py
07_uns_graphql/src/uns_graphql/queries/: graph.py  historian.py  historic_events.py  queries.cypher  uns_events.py
07_uns_graphql/src/uns_graphql/subscriptions/: __init__.py  kafka.py  mqtt.py
07_uns_graphql/src/uns_graphql/type/: basetype.py  historical_event.py  isa95_node.py  mqtt_event.py  sparkplugb_node.py  streaming_event.py  uns_event.py
07_uns_graphql/test/: conftest.py  test_07_health_check.py  test_basetypes.py  test_graphql_config.py  test_historical_event.py  test_kafka_subscription.py  test_kafka_topic.py  test_mqtt_event.py  test_mqtt_subscription.py  test_mqtt_topic.py  test_uns_event.py  test_uns_graphql_app.py
07_uns_graphql/test/backend/: conftest.py  test_graphdb.py  test_historian.py
07_uns_graphql/test/input/: test_kafka_topic.py  test_mqtt_topic.py
07_uns_graphql/test/queries/: conftest.py  test_data.cypher  test_graph.py  test_historian.py  test_historic_events.py
07_uns_graphql/test/subscriptions/: conftest.py  test_kafka.py  test_mqtt.py
07_uns_graphql/test/type/: test_basetypes.py  test_historical_event.py  test_mqtt_event.py  test_sparkplugb_node.py  test_unsnode.py
07_uns_graphql/test/types/: test_historical_event.py  test_mqtt_event.py
08_uns_mcp/: pyproject.toml
08_uns_mcp/conf/: .secrets_template.yaml  settings.yaml
08_uns_mcp/src/uns_mcp/: mcp_config.py  server.py
08_uns_mcp/src/uns_mcp/backend/: graphdb_client.py  historian_client.py  mqtt_client.py
08_uns_mcp/test/: test_mcp_config.py
99_simulator/: README.md  notes  pyproject.toml
99_simulator/conf/: settings.yaml
99_simulator/src/uns_simulator/: config.py  devices.py  main.py  models.py  simulator.py
99_simulator/test/: test_devices.py
(+51 files in other folders)
