[tool.poetry]
name = "Unified Name Space"
version = "0.7.5"
description = "Set of modules / tools to realize an UNS for your organization"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/"
# documentation = ""
keywords = ["uns", "mqtt", "sparkplugB", "graphDB", "historian"]
#classifiers = [
#   "License :: OSI Approved :: MIT License",
#   "Intended Audience :: Manufacturing",
#   "Topic :: Software Development :: Libraries :: MQTT"
#   "Topic :: Industry 4.0 :: Unified Name Space :: MQTT client"
# ]

[tool.poetry.dependencies]
python = "^3.8.1"
# All modules need the logger
logger = "^1.4"
# List of sub modules
uns_mqtt = { path = "./02_mqtt-cluster", develop = true }
uns_graphdb = { path = "./03_uns_graphdb", develop = true }
uns_historian = { path = "./04_uns_historian", develop = true }
uns_spb_mapper = { path = "./05_sparkplugb", develop = true }
uns_kafka_mapper = { path = "./06_uns_kafka", develop = true }
urllib3 = "1.26.16"

[tool.poetry.group.02_mqtt-cluster.dependencies]
paho-mqtt = "^1.6.1"
protobuf = "^4.23.4"

[tool.poetry.group.03_uns_graphdb.dependencies]
neo4j = "^5.11"
paho-mqtt = "^1.6.1"
dynaconf = "^3.2.0"

[tool.poetry.group.04_uns_historian.dependencies]
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
dynaconf = "^3.2.0"

[tool.poetry.group.05_sparkplugb.dependencies]
dynaconf = "^3.2.0"

[tool.poetry.group.06_uns_kafka.dependencies]
dynaconf = "^3.2.0"
confluent-kafka = "^2.2.0"
# All other dependencies fulfilled by uns_mqtt

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
safety = "^2.3.5"
pylint = "^2.17.5"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"

[tool.pytest.ini_options]
markers = ["integrationtest: mark a test as an integration test"]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = [
    "02_mqtt-cluster/test",
    "03_uns_graphdb/test",
    "04_uns_historian/test",
    "05_sparkplugb/test",
    "06_uns_kafka/test",
]
