[tool.poetry]
name = "Unified Name Space"
version = "0.8.50"
description = "Set of modules / tools to realize an UNS for your organization"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/"
# documentation = ""
keywords = [
    "uns",
    "mqtt",
    "sparkplugB",
    "graphDB",
    "historian",
    "kafka",
    "graphql",
]
package-mode = false 
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Intended Audience :: Manufacturing",
   "Topic :: Software Development :: Libraries :: MQTT",
   "Topic :: Industry 4.0 :: Unified Name Space :: MQTT client"
 ]

[tool.poetry.dependencies]
python = "^3.12"
# All modules need the logger
logger = "^1.4"
# List of sub modules
uns_mqtt = { path = "./02_mqtt-cluster", develop = true }
uns_graphdb = { path = "./03_uns_graphdb", develop = true }
uns_historian = { path = "./04_uns_historian", develop = true }
uns_spb_mapper = { path = "./05_sparkplugb", develop = true }
uns_kafka_mapper = { path = "./06_uns_kafka", develop = true }
uns_graphql = { path = "./07_uns_graphql", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.24"
pytest-xdist = { version="^3.6.1",extras =["psutil2"]}
pytest-timeout = "^2.3.1" 
pytest-cov = "^5.0.0"
safety = "^3.2.7"
ruff = "^0.6.3"

[tool.pytest.ini_options]
markers = ["integrationtest: mark a test as an integration test"]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
addopts = "--import-mode=importlib -n auto --dist loadgroup --timeout=300 --durations=10"
testpaths = [
    "02_mqtt-cluster/test",
    "03_uns_graphdb/test",
    "04_uns_historian/test",
    "05_sparkplugb/test",
    "06_uns_kafka/test",
    "07_uns_graphql/test",
]

[tool.ruff]


exclude = [
    # No need to traverse our git directories
    ".git",
    ".github",
    "__pycache__",
    ".cache",
    # The conf file is mostly autogenerated, ignore it
    "*env*",
    # This contains our built documentation
    "build",
    # This contains builds of flake8 that we don't want to check
    "dist",
    # This folder contains auto generated files which doesnt make sense to check 
    "generated",
]

# Allow lines to be as long as 127.
line-length = 127

[tool.ruff.lint]

preview = true
unfixable = ["B"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "E",
    "F",
    "UP",
    "W",
    "I",
    "N",
    "S",
    "T",
    "RUF",
    "LOG",
    "PERF",
]
ignore = [
    "D200",
    "D211",
    "D212",
    "D213",
    "S101",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
