[tool.poetry]
name = "uns-mqtt"
version = "0.9.2"
description = "Base package for mqtt clients required for all UNS clients to be built on MQTT. Supports based SparkplugB processing"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/02_mqtt-cluster"
# documentation = ""
keywords = ["uns", "mqtt", "sparkplugB"]
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Intended Audience :: Manufacturing",
   "Topic :: Software Development :: Libraries :: MQTT",
   "Topic :: Industry 4.0 :: Unified Name Space :: MQTT client wrapper"
 ]
packages = [
    { include = "uns_mqtt", from = "src" },
    { include = "uns_sparkplugb", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
logger = "^1.4"
paho-mqtt = "^2.1.0"
protobuf = "^5.28"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-xdist = { version="^3.6.1",extras =["psutil2"]}
pytest-timeout = "^2.3.1" 
pytest-cov = "^6.0.0"
safety = "^3.2.11"
ruff = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n auto --timeout=300 --durations=10"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"