[project]
name = "uns_mqtt"
version = "0.9.38"
description = "Base package for mqtt clients required for all UNS clients to be built on MQTT. Supports based SparkplugB processing"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = ">=3.14, <4"
readme = "README.md"
license = "MIT"
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" },
]
keywords = [
    "uns",
    "mqtt",
    "sparkplugB",
]
classifiers = [
    # "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python",
     "Development Status :: 4 - Beta",
     "Topic :: Communications",
#    "Topic :: Software Development :: Libraries :: MQTT",
#    "Topic :: Industry 4.0 :: Unified Name Space :: MQTT client wrapper",
]
dependencies = [
    "logger~=1.4",
    "paho-mqtt>=2.1.0,<3",
    "protobuf~=6.31",
]

[project.urls]
Repository = "https://github.com/mkashwin/unifiednamespace/tree/main/02_mqtt-cluster"

[dependency-groups]
test = [
    "pytest>=8.3.4,<10",
    "pytest-xdist>=3.6.1,<4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-cov>=6.0.0,<8",
    "safety>=3.4.0,<4",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = [
    "src/uns_mqtt",
    "src/uns_sparkplugb",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/uns_mqtt",
    "src/uns_sparkplugb",
]

[tool.hatch.build.targets.wheel.sources]
"src/uns_mqtt" = "uns_mqtt"
"src/uns_sparkplugb" = "uns_sparkplugb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n auto --timeout=300 --durations=10"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
