[metadata]
name = uns_mqtt

author = Ashwin Krishnan
author_email = mkashwin@gmail.com
description = Base package for mqtt clients required for all UNS clients to be built on MQTT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = src