[tool.poetry]
name = "uns_graphdb"
version = "0.7.10"
description = "Graph Database implementation for a UNS setup"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/03_uns_graphdb"
# documentation = ""
keywords = ["uns", "mqtt", "neo4j", "graphdb"]
#classifiers = [
#   "License :: OSI Approved :: MIT License",
#   "Intended Audience :: Manufacturing",
#   "Operating System :: OS Independent",
#   "Topic :: Software Development :: Libraries :: Graph DB",
#   "Topic :: Industry 4.0 :: Unified Name Space :: GraphDB Client"
# ]
packages = [{ include = "uns_graphdb", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
logger = "^1.4"
neo4j = "^5.16"
paho-mqtt = "^1.6.1"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
uns_mqtt = { path = "../02_mqtt-cluster", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
yapf = "^0.40.2"
flake8 = "^6.1.0"
pytest-cov = "^4.0.0"
safety = "^2.3.5"
pylint = "^3.0.3"

[tool.poetry.scripts]
uns_graphdb = "uns_graphdb.uns_mqtt_graphdb:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]


[tool.pylint.main]
# Files or directories to be skipped. They should be base names, not paths.
ignore = [
    ".git",
    "generated",
    ".github",
    "__pycache__",
    "*env*",
    "build",
    "dist",
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 127
