[tool.poetry]
name = "uns_graphdb"
version = "0.8.21"
description = "Graph Database implementation for a UNS setup"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/03_uns_graphdb"
# documentation = ""
keywords = ["uns", "mqtt", "neo4j", "graphdb"]
#classifiers = [
#   "License :: OSI Approved :: MIT License",
#   "Intended Audience :: Manufacturing",
#   "Operating System :: OS Independent",
#   "Topic :: Software Development :: Libraries :: Graph DB",
#   "Topic :: Industry 4.0 :: Unified Name Space :: GraphDB Client"
# ]
packages = [{ include = "uns_graphdb", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
logger = "^1.4"
neo4j = "^5.18"
paho-mqtt = "^1.6.1"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
uns_mqtt = { path = "../02_mqtt-cluster", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-xdist = { version="^3.5.0",extras =["psutil2"]}
pytest-cov = "^4.1.0"
safety = "^2.4.0b2"
ruff = "^0.3.2"

[tool.poetry.scripts]
uns_graphdb = "uns_graphdb.uns_mqtt_graphdb:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"] 


[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
