[project]
name = "uns_graphdb"
version = "0.9.35"
description = "Graph Database implementation for a UNS setup"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = ">=3.14, <4"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" },
    { name = "Johan Jeppson", email = "logic4human@gmail.com" },
]
keywords = [
    "uns",
    "mqtt",
    "neo4j",
    "graphdb",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Topic :: Communications",
    # "Topic :: Software Development :: Libraries :: Graph DB",
    # "Topic :: Industry 4.0 :: Unified Name Space :: GraphDB Client",
]
dependencies = [
    "logger~=1.4",
    "neo4j~=6.0",
    "dynaconf~=3.2",
    "psutil>=6.1.1,<8",
]

[project.urls]
Repository = "https://github.com/mkashwin/unifiednamespace/tree/main/03_uns_graphdb"

[project.scripts]
uns_graphdb = "uns_graphdb.uns_mqtt_graphdb:main"
uns_graphdb_healthcheck = "uns_graphdb.health_check:main"

[dependency-groups]
main = ["uns_mqtt"]
test = [
    "pytest>=8.3.4,<9",
    "pytest-xdist>=3.6.1,<4",
    "pytest-cov>=6.0.0,<8",
    "pytest-timeout>=2.3.1,<3",
     "safety>=3.4.0,<4",
]

[tool.uv]
default-groups = [
    "main",
    "test",
]

[tool.uv.sources]
uns_mqtt = { path = "../02_mqtt-cluster", editable = true }

[tool.hatch.build.targets.sdist]
include = ["src/uns_graphdb"]

[tool.hatch.build.targets.wheel]
include = ["src/uns_graphdb"]

[tool.hatch.build.targets.wheel.sources]
"src/uns_graphdb" = "uns_graphdb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"] 
addopts = "--timeout=300"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
