[tool.poetry]
name = "uns_historian"
version = "0.9.1"
description = "Historian implementation for a UNS setup"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/04_uns_historian"
# documentation = ""
keywords = ["uns", "mqtt", "timescaledb", "postgres", "historian"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Historian",
  "Topic :: Industry 4.0 :: Unified Name Space :: Historian Client"
]
packages = [{ include = "uns_historian", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
logger = "^1.4"
asyncpg = "^0.30"
dynaconf = "^3.2.4"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
uns_mqtt = { path = "../02_mqtt-cluster", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-xdist = { version="^3.6.1",extras =["psutil2"]}
pytest-timeout = "^2.3.1" 
pytest-asyncio = "^0.24"
pytest-cov = "^6.0.0"
safety = "^3.2.11"
ruff = "^0.7.4"


[tool.poetry.scripts]
uns_historian = "uns_historian.uns_mqtt_historian:main"
uns_historian_healthcheck = "uns_historian.health_check:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n 4 --dist loadgroup --timeout=300"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"