[project]
name = "uns_historian"
version = "0.9.35"
description = "Historian implementation for a UNS setup"
authors = [{ name = "Ashwin Krishnan", email = "mkashwin@gmail.com" }]
requires-python = ">=3.14, <4"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Himanshu Dhami", email = "himanshudhami@gmail.com" },
    { name = "Johan Jeppson", email = "logic4human@gmail.com" },
]
keywords = [
    "uns",
    "mqtt",
    "timescaledb",
    "postgres",
    "historian",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Topic :: Communications",
    # "Topic :: Software Development :: Libraries :: Historian",
    # "Topic :: Industry 4.0 :: Unified Name Space :: Historian Client",
]
dependencies = [
    "logger~=1.4",
    "asyncpg>=0.30,<0.31",
    "dynaconf~=3.2",
    "psutil>=6.1.1,<8",
]

[project.urls]
Repository = "https://github.com/mkashwin/unifiednamespace/tree/main/04_uns_historian"

[project.scripts]
uns_historian = "uns_historian.uns_mqtt_historian:main"
uns_historian_healthcheck = "uns_historian.health_check:main"

[dependency-groups]
main = ["uns_mqtt"]
test = [
    "pytest>=8.3.4,<10",
    "pytest-xdist>=3.6.1,<4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-asyncio>=0.25,<1.3",
    "pytest-cov>=6.0.0,<8",
     "safety>=3.4.0,<4",
]

[tool.uv]
default-groups = [
    "main",
    "test",
]

[tool.uv.sources]
uns_mqtt = { path = "../02_mqtt-cluster", editable = true }

[tool.hatch.build.targets.sdist]
include = ["src/uns_historian"]

[tool.hatch.build.targets.wheel]
include = ["src/uns_historian"]

[tool.hatch.build.targets.wheel.sources]
"src/uns_historian" = "uns_historian"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n 4 --dist loadgroup --timeout=300"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
