[metadata]
name = uns_historian

author = Ashwin Krishnan
author_email = mkashwin@gmail.com
description = Historian implementation for a UNS setup
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.5

[options.packages.find]
where = src