[tool.poetry]
name = "uns_spb_mapper"
version = "0.9.2"
description = "SparkplugB decoder to parse and unpack  SparkplugB messages to the UNS structure"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/05_sparkplugb"
# documentation = ""
keywords = ["uns", "mqtt", "sparkplugb"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: spB to UNS ",
  "Topic :: Industry 4.0 :: Unified Name Space :: spB to UNS Mapper Client"
]
packages = [{ include = "uns_spb_mapper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
logger = "^1.4"
dynaconf = "^3.2.4"
psutil = "^6.1.1"

[tool.poetry.group.dev.dependencies]
uns-mqtt = { path = "../02_mqtt-cluster", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = { version="^3.5.0",extras =["psutil2"]}
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.1" 
safety = "^3.2.14"
ruff = "^0.9"

[tool.poetry.scripts]
uns_spb_mapper = "uns_spb_mapper.uns_sparkplugb_listener:main"
uns_spb_mapper_healthcheck = "uns_spb_mapper.health_check:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n auto --timeout=300"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"