[metadata]
name = uns_sparkplugb

author = Ashwin Krishnan
author_email = mkashwin@gmail.com
description = SparkplugB decoder to parse and unpack  SparkplugB messages to the UNS structure 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = src