[tool.poetry]
name = "uns_kafka_mapper"
version = "0.8.50"
description = "Listens to the UNS namespace, converts UNS topic to Kafka topic and publishes the message to Kafka"
license = "MIT"
authors = ["Ashwin Krishnan <mkashwin@gmail.com>"]
maintainers = [
    "Himanshu Dhami <himanshudhami@gmail.com>",
    "Johan Jeppson <logic4human@gmail.com>",
]
readme = "README.md"
# homepage = ""
repository = "https://github.com/mkashwin/unifiednamespace/tree/main/06_uns_kafka"
# documentation = ""
keywords = ["uns", "mqtt", "kafka"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: UNS to Kafka ",
  "Topic :: Industry 4.0 :: Unified Name Space :: UNS to Kafka Mapper Client"
]
packages = [{ include = "uns_kafka", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
logger = "^1.4"
dynaconf = "^3.2.4"
confluent-kafka = "^2.4.0"


[tool.poetry.group.dev.dependencies]
uns-mqtt = { path = "../02_mqtt-cluster", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-xdist = { version="^3.6.1",extras =["psutil2"]}
pytest-timeout = "^2.3.1" 
pytest-cov = "^5.0.0"
safety = "^3.2.4"
ruff = "^0.5.0"

[tool.poetry.scripts] #TODO fix
uns_kafka_mapper = "uns_kafka.uns_kafka_listener:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "node_modules", "env*", "tmp*"]
testpaths = ["test"]
markers = ["integrationtest: mark a test as an integration test"]
addopts = "-n auto --timeout=300"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
